--- a/style.css
+++ b/style.css
@@ -155,8 +155,8 @@ header{
 }
 
 .button_signup {
-  width: 165px;
-  height: 50px;
+  width: 150px;
+  height: 40px;
   background-color: #0063dd;
   border:2px solid #0063dd;
   border-radius: 30px;
@@ -398,23 +398,18 @@ header{
   margin: 30px 0;
 }
 
-.more{
+.read_more{
   color:#0f7bff;
 }
 
-.more a{
+.read_more a{
   text-decoration: none;
   font-weight: 500;
   color:#0f7bff;
 }
 
-
-.about_pic{
-  width: 100%;
-  z-index: 10;
-  display: flex;
-  justify-content: flex-start;
-  align-items:center;
+.read_more a::after{
+   content: "→"	
 }
 
 .about_pic img{
@@ -423,22 +418,15 @@ header{
   border-radius: 5px;
 }
 
-.pic{
-  box-shadow: 0 0 62px rgba(142, 142, 142, .43);
-  border-radius: 5px;
-}
-
 .pic-1{
   position: relative;
-  left: 150px;
-  top: -15px;
+  top: 120px;
 }
 .pic-2 {
   position: relative;
-  left: 300px;
-  top: 500px;
+  left: 630px;
+  top: 180px;
 }
-
 
 section{
   max-width: 1170px;
@@ -688,6 +676,7 @@ cursor: pointer;
 }
 
 .carousel_elem{
+  text-align: left;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(165, 165, 165, .1);
   max-width: 300px;
@@ -938,43 +927,28 @@ footer{
   width: 82px;
 }
 
-.scroll_up{
-  display: none;
-  width:45px;
-  height: 45px;
+#button_up {  
+  text-decoration: none;
+  color: #fff;
+  display: inline-block;       
+  text-align: center;   
+  border-radius: 4px;   
   position: fixed;
-  bottom:20px;
-  right: 40px;
-  background-color: #fff;
-  border-radius: 5px;
-  z-index: 1000;
-}
-
-.scroll_up--active{
-  display: block;
-}
-
-.scroll_up .icon{
-  position: relative;
-  left:21.5px;
-  bottom:-8px;
-  height: 25px;
-  background-color: #0f7bff;
-}
-
-.scroll_up .icon::after, .scroll__up .icon::before{
-  width: 10px;
-  top:2px;
-  background-color:  #0f7bff;
-}
-
-.scroll_up .icon::before {
-  transform: rotate(45deg);
-}
-
-.scroll_up .icon:after{
-  transform: rotate(-45deg);
-}
+  margin: 20px;      
+  bottom: 30px;   
+  right: 60px;
+  transition: background-color .3s;   
+  z-index: 1000; 
+} 
+#button_up:hover {   
+  cursor: pointer;   
+  background-color: #fff; 
+  color:rgba(15, 123, 255, 1); ;
+} 
+#button_up:active {   
+  color: #fff;
+  background-color:rgba(15, 123, 255, 1);
+} 
 
 @media (max-width:1200px){
   section{
@@ -1146,6 +1120,7 @@ footer{
   }
 
   .intro_text{
+    padding: 0 20px;
     margin:20px auto;
   }
 
@@ -1166,11 +1141,19 @@ footer{
     .intro_button--download{
       margin-bottom: 30px;
     }
+	
+    .intro_arrow{
+      display: none;
+    }
 
     .about_item{
       padding: 60px 0;
     }
 
+    .about_pic{
+       display: none;
+    }
+	
     .how_items{
       flex-direction: column;
       margin: 40px 20px 0;
