--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@ body {
   width: 15%;
 }
 .burger-menu {
-  position: absolute;
   display: none;
 }
 .menu-list {
@@ -603,6 +602,9 @@ main {
   justify-content: space-between;
 }
 .product-item {
+  position: relative;
+  z-index: -1;
+  top: 35px;
   box-sizing: border-box;
   width: 100%;
   padding: 30px 20px 0 20px;
@@ -620,6 +622,7 @@ main {
   position: relative;
 }
 .product-body {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
@@ -941,6 +944,8 @@ main {
   }
   .burger-menu {
     display: block;
+    margin-top: -130px;
+    margin-right: -20px;
   }
   .menu-list {
     display: none;
@@ -963,7 +968,6 @@ main {
   .trend-body {
     width: 40%;
   }
-  
   .news {
     max-width: 682px;
     width: 100%;
@@ -979,20 +983,15 @@ main {
     margin-left: 32px;
   }
   .products {
-    max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 850px;
   }
   .product-cards {
-    max-width: 345px;
-    width: 100%;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
   }
   .product-card {
     flex-direction: row;
     flex-wrap: wrap;
-    width: 50%;
   }
   .widget {
     max-width: 697px;
